# IT-Project-3

./: .bashrc  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 00_data_exploration.ipynb  01_most_common_metrics.ipynb  02_standard_metrics.ipynb  03_development_of_information_theory_metrics.ipynb  03_information_theory_metrics.ipynb  04_transfer_entropy.ipynb  05_significance_tests.ipynb
src/: cleansing.py  conditional_mutual_information.py  entropy.py  granger_causality.py  mutual_information.py  transfer_entropy.py  understanding.py  utils.py  visualisations.py
tests/: test_entropy.py  test_mutual_information.py  test_transfer_entropy.py
